Name:                crypto-pubkey
Version:             0.1.0
Description:         Public Key cryptography
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            Public Key cryptography
Category:            Cryptography
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-crypto-pubkey
Cabal-Version:       >=1.8
Extra-Source-Files:  Tests/*.hs

Flag benchmark
  Description:       Build benchmarks
  Default:           False

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
                   , crypto-random-types
                   , crypto-pubkey-types >= 0.2 && < 0.3
                   , crypto-numbers
  Exposed-modules:   Crypto.PubKey.RSA
                     Crypto.PubKey.RSA.PKCS15
                     Crypto.PubKey.DSA
                     Crypto.PubKey.DH
  other-modules:     Crypto.PubKey.ElGamal
                     Crypto.PubKey.RSA.Types
                     Crypto.PubKey.RSA.Prim
  ghc-options:       -Wall

Test-Suite test-crypto-pubkey
  type:              exitcode-stdio-1.0
  hs-source-dirs:    Tests
  Main-Is:           Tests.hs
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , cryptohash
                   , crypto-pubkey
                   , crypto-numbers
                   , crypto-random-types
                   , QuickCheck >= 2
                   , test-framework >= 0.3.3 && < 0.7
                   , test-framework-quickcheck2 >= 0.2.9 && < 0.3

Benchmark bench-crypto-pubkey
  hs-source-dirs:    Benchs
  Main-Is:           Bench.hs
  type:              exitcode-stdio-1.0
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , crypto-random-types
                   , crypto-pubkey
                   , criterion
                   , mtl

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-cryptocipher
